fixed syntax errors